--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/chart.js": "^2.9.27",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "16.9.55",
     "@types/react-dom": "^16.9.8",
     "axios": "^0.21.0",
+    "chart.js": "^2.9.4",
     "history": "^5.0.0",
     "react": "^17.0.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.1",
     "react-router": "^6.0.0-beta.0",
